--- a/js.conf
+++ b/js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, *.amemv.com, aweme*.snssdk.com, *.xiaoxiao*.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, as.xiaojukeji.com, api.m.jd.com, trade-acs.m.taobao.com, api.bilibili.com,
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, *.amemv.com, aweme*.snssdk.com, *.xiaoxiao*.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, as.xiaojukeji.com, api.m.jd.com, trade-acs.m.taobao.com, api.bilibili.com, ios.fuliapps.com, apple.fuliapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com
 
 # 去微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -34,3 +34,6 @@ https?://link.zhihu.com/\?target= url script-request-header https://raw.githubus
 
 # 哔哩哔哩番剧开启1080P+
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/bilifj.js
+
+# xjsp去广告
+^https?:\/\/.*\.(fuli|xiang(jiao|xiang))apps\.com\/(ucp\/index|getGlobalData|.+\/reqplay\/) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/xjsp.js
