--- a/cookie.conf
+++ b/cookie.conf
@@ -1,4 +1,4 @@
-hostname = api.xiaoheihe.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, act.10010.com, m.client.10010.com, music.163.com, *.smzdm.com
+hostname = api.xiaoheihe.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, act.10010.com, m.client.10010.com, music.163.com, *.smzdm.com, wq.jd.com
 
 # 小黑盒
 ^https:\/\/api\.xiaoheihe\.cn\/account\/home_v\d\/\? url script-request-header https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js
@@ -19,3 +19,6 @@ hostname = api.xiaoheihe.cn, passport.suning.com, luckman.suning.com, sign.sunin
 
 # 什么值得买
 ^https:\/\/www\.smzdm\.com\/?.? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/smzdm/quanx/smzdm.cookie.js
+
+# 京喜农场
+^https\:\/\/wq\.jd\.com\/cubeactive\/farm\/dotask url script-request-header https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.cookie.js
