--- a/cookie.conf
+++ b/cookie.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, api.xiaoheihe.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, act.10010.com, m.client.10010.com, music.163.com, *.smzdm.com, wq.jd.com
+hostname = api.m.jd.com, api.xiaoheihe.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, act.10010.com, m.client.10010.com, music.163.com, *.smzdm.com, wq.jd.com, account.huami.com
 
 #京东获取Cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -25,3 +25,6 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 
 # 京喜农场
 ^https\:\/\/wq\.jd\.com\/cubeactive\/farm\/dotask url script-request-header https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.cookie.js
+
+# 小米运动获取Token
+^https:\/\/account\.huami\.com\/v2\/client\/login url script-response-body https://raw.githubusercontent.com/lxk0301/jd_scripts/master/backUp/xmSports.js
