--- a/cookie.conf
+++ b/cookie.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, wq.jd.com, api.xiaoheihe.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, act.10010.com, m.client.10010.com, music.163.com, *.smzdm.com, wq.jd.com, account.huami.com
+hostname = api.m.jd.com, wq.jd.com, api.xiaoheihe.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, act.10010.com, m.client.10010.com, music.163.com, *.smzdm.com, wq.jd.com, account.huami.com, draw.jdfcloud.com
 
 #京东获取Cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -30,3 +30,8 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 
 # 小米运动获取Token
 ^https:\/\/account\.huami\.com\/v2\/client\/login url script-response-body https://gitee.com/lxk0301/jd_scripts/raw/master/backUp/xmSports.js
+
+# 宠汪汪助力更新Token
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code= url script-response-body https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_run.js
+# 宠汪汪助力获取Token
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId= url script-request-header https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_run.js
