--- a/cookie.conf
+++ b/cookie.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, wq.jd.com, api.xiaoheihe.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, act.10010.com, m.client.10010.com, music.163.com, *.smzdm.com, wq.jd.com, account.huami.com, draw.jdfcloud.com
+hostname = api.m.jd.com, wq.jd.com, api.xiaoheihe.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, act.10010.com, m.client.10010.com, music.163.com, *.smzdm.com, wq.jd.com, account.huami.com
 
 #京东获取Cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
