--- a/js.conf
+++ b/js.conf
@@ -1,4 +1,4 @@
-hostname = *.xiaoxiao*.com, as.xiaojukeji.com, api.m.jd.com, trade-acs.m.taobao.com, api.bilibili.com, ios.fuliapps.com, apple.fuliapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, draw.jdfcloud.com
+hostname = *.xiaoxiao*.com, as.xiaojukeji.com, api.m.jd.com, trade-acs.m.taobao.com, api.bilibili.com, ios.fuliapps.com, apple.fuliapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, account.huami.com, draw.jdfcloud.com
 
 # 小小影视Vip (By Meeta)
 https:\/\/.*\.xiaoxiao.*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/xxys.js
