--- a/cookie.conf
+++ b/cookie.conf
@@ -1,4 +1,7 @@
-hostname = me-api.jd.com, wq.jd.com, m.jingxi.com
+hostname = api.m.jd.com, me-api.jd.com, wq.jd.com, m.jingxi.com
+
+# 京东
+https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
 
 # 获取多账号京东Cookie
 ^https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js
