--- a/js.conf
+++ b/js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, *.amemv.com, as.xiaojukeji.com, trade-acs.m.taobao.com, api.bilibili.com, ios.fuliapps.com, apple.fuliapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, account.huami.com, jcap.m.jd.com,*.360buyimg.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, *.amemv.com, as.xiaojukeji.com, trade-acs.m.taobao.com, api.bilibili.com, ios.fuliapps.com, apple.fuliapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, account.huami.com
 
 # 去微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -26,7 +26,3 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, *.am
 
 # 小米运动获取Token
 ^https:\/\/account\.huami\.com\/v2\/client\/login url script-response-body https://jdsharedresourcescdn.azureedge.net/jdresource/xmSports.js
-
-# 京东账号登陆辅助
-^https:\/\/jcap\.m\.jd\.com\/home\/requireCaptcha\.js  url script-response-body https://raw.githubusercontent.com/dompling/Script/master/jd/jd_login_help.js
-^https:\/\/wq\.360buyimg\.com\/js\/common\/dest\/m\.commonFooter\.min\.js  url script-response-body https://raw.githubusercontent.com/dompling/Script/master/jd/jd_login_help.js
