--- a/cookie.conf
+++ b/cookie.conf
@@ -1,4 +1,4 @@
-ihostname = api.m.jd.com, me-api.jd.com, wq.jd.com, m.jingxi.com, h5.ele.me
+hostname = api.m.jd.com, me-api.jd.com, wq.jd.com, m.jingxi.com, h5.ele.me
 
 # 京东
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
