--- a/jd_historical_price.conf
+++ b/jd_historical_price.conf
@@ -1,4 +1,9 @@
 hostname = api.m.jd.com
 
 #^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yxgsir/yichahucha/master/jd_price.js
+
+#如果京东入会开卡打开无网络，是因为比价主机名导致，可以关闭本条重写规则解决
+
+# 京东比价
+#比价信息显示在商品下方
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
