--- a/cookie.conf
+++ b/cookie.conf
@@ -1,7 +1,8 @@
-hostname = api.m.jd.com, me-api.jd.com, wq.jd.com, m.jingxi.com, h5.ele.me
+hostname = ms.jr.jd.com, api.m.jd.com, me-api.jd.com, wq.jd.com, m.jingxi.com, h5.ele.me
 
-# 京东
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+# NobyDa京东cookie
+^https:\/\/(api\.m|me-api)\.jd\.com\/(client\.action\?functionId=signBean|user_new\/info\/GetJDUserInfoUnion\?) url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+^https:\/\/ms\.jr\.jd\.com\/gw\/generic\/hy\/h5\/m\/appSign\? url script-request-body https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
 
 # 获取多账号京东Cookie
 ^https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion url script-request-header https://raw.githubusercontent.com/dompling/Script/master/jd/JD_extra_cookie.js
